--- a/Server/package.json
+++ b/Server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@metamask/eth-sig-util": "^5.0.2",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
     "mongoose": "^7.0.3"
